--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- My JS file !-->
   <script type="text/javascript" src="assets/js/style.js"></script>
   <!-- Unite Gallery Plugin!-->
-  <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
+  <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
   <script type='text/javascript' src='plugins/js/unitegallery.min.js'></script> 
   <link rel='stylesheet' href='plugins/css/unite-gallery.css' type='text/css' /> 
   <script type='text/javascript' src='plugins/themes/tiles/ug-theme-tiles.js'></script>
@@ -38,7 +38,7 @@
 		<div class="title">
 
       <!-- Ran out of time on fixing this, font style is kinda off and not fitting for the rest of the site !--> 
-  <svg id="animate" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+  <svg id="animate" version="1.1" id="Layer_1" xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink" x="0px" y="0px"
     viewBox="0 0 342.2 79" style="enable-background:new 0 0 342.2 79;" xml:space="preserve">
     <style type="text/css">
       .st0{fill:none;}
