Updated picture files

--- a/index.html
+++ b/index.html
@@ -177,20 +177,20 @@
         data-image="assets/img/watch.jpg"
         data-description="Looking like a Watch Advertisement">
       
-      <img alt="Campanile, UC Berkeley" src="assets/img/tyingshoe.jpg"
-        data-image="assets/img/tyingshoe.jpg"
+      <img alt="Campanile, UC Berkeley" src="assets/img/tyingshoe.JPG"
+        data-image="assets/img/tyingshoe.JPG"
         data-description="Wait! I'm not ready!">
 
-      <img alt="Campanile, UC Berkeley" src="assets/img/profilepic.jpg"
-        data-image="assets/img/profilepic.jpg"
+      <img alt="Campanile, UC Berkeley" src="assets/img/profilepic.JPG"
+        data-image="assets/img/profilepic.JPG"
         data-description="Hey I'm photogenic sometimes I guess">
 
-      <img alt="Shooting Photos" src="assets/img/behindcamera.jpg"
-        data-image="assets/img/behindcamera.jpg"
+      <img alt="Shooting Photos" src="assets/img/behindcamera.JPG"
+        data-image="assets/img/behindcamera.JPG"
         data-description="Behind the Camera">
 
-      <img alt="Red Metal Sculpture, Outside Genetics and Plant Biology Building" src="assets/img/hood.jpg"
-        data-image="assets/img/hood.jpg"
+      <img alt="Red Metal Sculpture, Outside Genetics and Plant Biology Building" src="assets/img/hood.JPG"
+        data-image="assets/img/hood.JPG"
         data-description="Hood Up: It's too bright out here">
   </div>
 
